test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args/src/deprecated_attr.sw
library;

#[deprecated(note = "note")]
pub struct Ok { }

#[deprecated(noe = "note")]
#[deprecated(unknown_arg = "note")]
pub struct NotOk { }